added centered class so card is always smack in the middle of the screen

--- a/main.css
+++ b/main.css
@@ -145,3 +145,11 @@ div p.hide {
 /*  position: relative;*/
 /*  margin: 20% auto;*/
 /*}*/
+
+.centered {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  /* bring your own prefixes */
+  transform: translate(-50%, -50%);
+}
