--- a/main.css
+++ b/main.css
@@ -69,7 +69,7 @@ body {
 .card__content {
   width: 100%;
   height: 100%;
-  font-family: 'Helvetica';
+  font-family: 'Helvetica', sans-serif;
 }
 
 .card__header {
@@ -128,6 +128,7 @@ body {
   font-size: 23px;
   line-height: 1.4;
   letter-spacing: 0.7px;
+  justify-content: left;
 }
 
 div p.hide {
