--- a/main.css
+++ b/main.css
@@ -118,10 +118,15 @@ body {
   color: var(--dark);
   /*font-weight: 600;*/
   text-align: center;
-  margin-top: 25%;
-  margin-left: 100px;
-  margin-right: 100px;
+  /*margin-left: 100px;*/
+  /*margin-right: 100px;*/
   /*background-color: lightcoral;*/
+  position: fixed;
+  top:50%;
+  left:50%;
+  /* bring your own prefixes */
+  transform: translate(-50%, -50%);
+  /*width: 60%;*/
 }
 
 .card__body p {
